# Pinterest-Downloader

./: .gitignore  LICENSE  README.md  pinterest-downloader.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pinterest_downloader/: __init__.py  __main__.py  api.py  cli.py  config.py  download.py  orchestrator.py  paths.py  session.py  ui.py
tests/: test_config.py  test_session.py
tests/test_api/: test_parsing.py
tests/test_download/: test_core.py
tests/test_filesystem/: test_paths.py
